{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "634f2bcb-1310-43a6-a11e-978e3dc6b947",
            "actions": [
                {
                    "name": "PlayerMovement",
                    "type": "Value",
                    "id": "3687c04d-4b74-41e1-9477-8e0f6890d44f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "9f6a0b3b-2bc5-4c4f-b136-c30d736064b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ActionButton",
                    "type": "Button",
                    "id": "e7f90d44-a22b-4970-8c4c-06f081b48972",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "033f8b65-b8f4-4f96-9b7e-47ae1bed782c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0062e22a-22b8-493f-a101-c0587fe4766d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cb612d7-2414-4661-a14a-a94d7c3385cf",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}